@@ -306,15 +306,16 @@ static void pelogalm(
  *  - the input file is an architecture-dependent file
  *  - the output and error are the job's output and error
  * The epilogue also has:
- *  - argv[5] is the session id
- *  - argv[6] is the list of resource limits specified
- *  - argv[7] is the list of resources used
- *  - argv[8] is the queue in which the job resides
- *  - argv[9] is the account under which the job run
+ *   - argv[5] is the session id
+ *   - argv[6] is the list of resource limits specified
+ *   - argv[7] is the list of resources used
+ *   - argv[8] is the queue in which the job resides
+ *   - argv[9] is the account under which the job run
+ *   - argv[10] is the exit status
  * The prologue also has:
- *  - argv[5] is the list of resource limits specified
- *  - argv[6] is the queue in which the job resides
- *  - argv[7] is the account under which the job is run
+ *   - argv[5] is the list of resource limits specified
+ *   - argv[6] is the queue in which the job resides
+ *   - argv[7] is the account under which the job is run
  * 
  * @see TMomFinalizeChild() - parent
  * @see pelog_err() - child
@@ -739,9 +740,10 @@ int run_pelog(
       arg[7] = resc_to_string(pjob, (int)JOB_ATR_resc_used, resc_used, sizeof(resc_used));
       arg[8] = pjob->ji_wattr[(int)JOB_ATR_in_queue].at_val.at_str;
       arg[9] = pjob->ji_wattr[(int)JOB_ATR_account].at_val.at_str;
-      arg[10] = NULL;
+      asprintf(&arg[10], "%ld", pjob->ji_qs.ji_un.ji_exect.ji_exitstat);
+      arg[11] = NULL;
 
-      LastArg = 10;
+      LastArg = 11;
       }
     else
       {
